# political-net

./: .env.example  .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt
algorithm/: __init__.py  graph_builder.py
algorithm/shortest_path/: test_algo.py  test_algo_networkx.py  test_readme.MD
analysis/: community_analysis.py  node_ranking.py  small_world.py
analysis/results/: graph_ranking.json  small_world_results.txt
chatbot/: run_chatbot.py  serve_app.py
chatbot/Q_and_A/: USAGE.txt  analyze_patterns.py  debug_term_duration.py  filter_dataset.py  generate_1hop_comprehensive.py  generate_dataset.py  generate_dataset_large.py  kg_utils.py  llm_client.py  supplement_dataset.py  templates.py
chatbot/core/: cypher_engine.py  embeddings.py  llm_client.py  vector_index.py
chatbot/entity_identification/: __init__.py  clean_extractions.py  entity_extractor.py  merge_extractions.py
chatbot/graph/: graph.py  multihop_config.py  nodes.py  prompts.py  state.py  workflow.py
chatbot/ner/: core.py
chatbot/semantic_router/: route.py  router.py
chatbot_FE/: index.html  script.js  style.css
crawl/: algorithm.py  alias.py  crawl_expand.py  crawl_names.py  crawl_politicians.py  show_xml_structure.py
data/: insights.txt  list_cities.txt  sample_graph_database.json
deploy/: server_api.py
enrichment/: enrich_neo4j.py  enrich_sum.py  schema.json  sum_enrich.py
graph/: build_edges_.py  build_kgs.py  export_graph.py  graph.py  load_graph.py
ml/: README.md  finetune_phobert.py  generate_training_data.py  inference_phobert.py  requirements.txt
ollama_v2/: Modelfile
preprocessing/: awards_normalizer.py  battles_normalizer.py  birth_date_normalizer.py  build_knowledge_graph.py  clean_infobox.py  education_normalizer.py  party_normalizer.py  province_normalizer.py
utils/: _logger.py  api_key_rotator.py  config.py  external.py  queue_based_async_logger.py
(+73 files in other folders)
