[project]
name = "political-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-generativeai>=0.8.5",
    "community>=1.0.0b1",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.6",
    "mwparserfromhell>=0.7.2",
    "mwxml>=0.3.6",
    "neo4j>=6.0.2",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-louvain>=0.16",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "underthesea>=8.3.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "wikitextparser>=0.56.4",
    "protonx>=0.1.6",
    "langchain-google-genai>=2.0.10",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "sentence-transformers>=5.1.2",
    "langchain-huggingface>=0.3.1",
    "langgraph>=1.0.1",
    "faiss-cpu>=1.13.0",
    "unsloth",
    "unsloth-zoo>=2025.11.6",
    "bitsandbytes>=0.48.2",
    "langserve[all]>=0.3.3",
    "fastapi>=0.123.9",
    "uvicorn>=0.38.0",
    "lfs>=0.2",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
